force-app/main/default/objects/Case/fields/CRC_Priority__c.field-meta.xml
<CustomField>
    <fullName>CRC_Priority__c</fullName>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>