force-app/main/default/objects/Case/fields/CRC_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>CRC_Process_Status__c</fullName>
    <label>Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wait Release</fullName>
            </value>
            <value>
                <fullName>Release Problem</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>