force-app/main/default/objects/Case/fields/CRC_Provider_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>CRC_Provider_Group_Code__c</fullName>
    <label>Provider Group Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>