force-app/main/default/objects/Case/fields/CRC_Provider_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>CRC_Provider_Group_Description__c</fullName>
    <label>Provider Group Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>