force-app/main/default/objects/Case/fields/CRC_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>CRC_Provider_Name__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Name</label>
    <type>Text</type>
</CustomField>