force-app/main/default/objects/Case/fields/CRC_Provider_SLA__c.field-meta.xml
<CustomField>
    <fullName>CRC_Provider_SLA__c</fullName>
    <label>Provider SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Hour</fullName>
            </value>
            <value>
                <fullName>2 Hour</fullName>
            </value>
            <value>
                <fullName>Same Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>