force-app/main/default/objects/Case/fields/CRC_Quick_Release__c.field-meta.xml
<CustomField>
    <fullName>CRC_Quick_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quick Release</label>
    <type>Checkbox</type>
</CustomField>