force-app/main/default/objects/Case/fields/CRC_Quoted_Release_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CRC_Quoted_Release_Date_Time__c</fullName>
    <label>Quoted Release Date/Time</label>
    <type>DateTime</type>
</CustomField>