force-app/main/default/objects/Case/fields/CRC_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>CRC_Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DLY</fullName>
                <label>Daily</label>
            </value>
            <value>
                <fullName>OTH</fullName>
                <label>Flat Fee</label>
            </value>
            <value>
                <fullName>VAR</fullName>
                <label>Variable Fee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>