force-app/main/default/objects/Case/fields/CRC_Release_Person_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CRC_Release_Person_Last_Name__c</fullName>
    <label>Release Person Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>