force-app/main/default/objects/Case/fields/CRC_Release_Person_User_Id__c.field-meta.xml
<CustomField>
    <fullName>CRC_Release_Person_User_Id__c</fullName>
    <label>Release Person User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>