force-app/main/default/objects/Case/fields/CRC_Release_Problem_Email__c.field-meta.xml
<CustomField>
    <fullName>CRC_Release_Problem_Email__c</fullName>
    <label>Release Problem Email</label>
    <type>Email</type>
</CustomField>