force-app/main/default/objects/Case/fields/CRC_Release_Problem_Follow_Up_Datetime__c.field-meta.xml
<CustomField>
    <fullName>CRC_Release_Problem_Follow_Up_Datetime__c</fullName>
    <label>Release Problem Follow Up Datetime</label>
    <type>DateTime</type>
</CustomField>