force-app/main/default/objects/Case/fields/CRC_Release_Requirements__c.field-meta.xml
<CustomField>
    <fullName>CRC_Release_Requirements__c</fullName>
    <label>Release Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CL</fullName>
                <label>Camera Letter</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>Varies-Call Shop</label>
            </value>
            <value>
                <fullName>CT</fullName>
                <label>Copy of Title</label>
            </value>
            <value>
                <fullName>HH</fullName>
                <label>Hold Harmless</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>NONE</label>
            </value>
            <value>
                <fullName>OR</fullName>
                <label>Owner Release</label>
            </value>
            <value>
                <fullName>PA</fullName>
                <label>Police Authorization</label>
            </value>
            <value>
                <fullName>RL</fullName>
                <label>Release Letter</label>
            </value>
            <value>
                <fullName>SW</fullName>
                <label>Storage Waiver Letter</label>
            </value>
            <value>
                <fullName>TR</fullName>
                <label>Transport Vendor Requirements Letter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>