force-app/main/default/objects/Case/fields/CRC_Res_Checksum__c.field-meta.xml
<CustomField>
    <fullName>CRC_Res_Checksum__c</fullName>
    <label>CRC Res Checksum</label>
    <length>50</length>
    <type>Text</type>
</CustomField>