force-app/main/default/objects/Case/fields/CRC_Res_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>CRC_Res_Location_Id__c</fullName>
    <label>CRC Res Location Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>