force-app/main/default/objects/Case/fields/CRC_Runnable_and_Driveble_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CRC_Runnable_and_Driveble_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Runnable and Driveble Indicator</label>
    <type>Checkbox</type>
</CustomField>