force-app/main/default/objects/Case/fields/CRC_Salvage_Drop_Off_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CRC_Salvage_Drop_Off_Date_Time__c</fullName>
    <label>Salvage Drop Off Date/Time</label>
    <type>DateTime</type>
</CustomField>