force-app/main/default/objects/Case/fields/CRC_Salvage_Id__c.field-meta.xml
<CustomField>
    <fullName>CRC_Salvage_Id__c</fullName>
    <label>Salvage Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>