force-app/main/default/objects/Case/fields/CRC_Salvage_Provider__c.field-meta.xml
<CustomField>
    <fullName>CRC_Salvage_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salvage Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Salvage Provider)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>