force-app/main/default/objects/Case/fields/CRC_Secondary_Damage_Code__c.field-meta.xml
<CustomField>
    <fullName>CRC_Secondary_Damage_Code__c</fullName>
    <label>Secondary Damage Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AO</fullName>
                <label>All Over</label>
            </value>
            <value>
                <fullName>BI</fullName>
                <label>Biohazard</label>
            </value>
            <value>
                <fullName>CC</fullName>
                <label>Cash for Clunkers</label>
            </value>
            <value>
                <fullName>EL</fullName>
                <label>Electrical</label>
            </value>
            <value>
                <fullName>EB</fullName>
                <label>Engine Burn</label>
            </value>
            <value>
                <fullName>ED</fullName>
                <label>Engine Damage</label>
            </value>
            <value>
                <fullName>XB</fullName>
                <label>Exterior Burn</label>
            </value>
            <value>
                <fullName>FL</fullName>
                <label>Flood</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>Frame</label>
            </value>
            <value>
                <fullName>FW</fullName>
                <label>Fresh Water</label>
            </value>
            <value>
                <fullName>BO</fullName>
                <label>Front &amp; Rear</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Front end</label>
            </value>
            <value>
                <fullName>HA</fullName>
                <label>Hail</label>
            </value>
            <value>
                <fullName>IB</fullName>
                <label>Interior Burn</label>
            </value>
            <value>
                <fullName>BS</fullName>
                <label>Left &amp; Right Side</label>
            </value>
            <value>
                <fullName>LF</fullName>
                <label>Left Front</label>
            </value>
            <value>
                <fullName>LR</fullName>
                <label>Left Rear</label>
            </value>
            <value>
                <fullName>LS</fullName>
                <label>Left Side</label>
            </value>
            <value>
                <fullName>ME</fullName>
                <label>Mechanical</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Rear</label>
            </value>
            <value>
                <fullName>RP</fullName>
                <label>Repossession</label>
            </value>
            <value>
                <fullName>RF</fullName>
                <label>Right Front</label>
            </value>
            <value>
                <fullName>RR</fullName>
                <label>Right Rear</label>
            </value>
            <value>
                <fullName>RS</fullName>
                <label>Right Side</label>
            </value>
            <value>
                <fullName>RO</fullName>
                <label>Rollover</label>
            </value>
            <value>
                <fullName>OF</fullName>
                <label>Roof</label>
            </value>
            <value>
                <fullName>SW</fullName>
                <label>Salt Water</label>
            </value>
            <value>
                <fullName>SD</fullName>
                <label>Storm Damage</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Strip</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>