force-app/main/default/objects/Case/fields/CRC_Secondary_Extension__c.field-meta.xml
<CustomField>
    <fullName>CRC_Secondary_Extension__c</fullName>
    <label>Secondary Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>