force-app/main/default/objects/Case/fields/CRC_Series__c.field-meta.xml
<CustomField>
    <fullName>CRC_Series__c</fullName>
    <label>Series</label>
    <length>25</length>
    <type>Text</type>
</CustomField>