force-app/main/default/objects/Case/fields/CRC_SLA_Calculated_Pickup_DateTime__c.field-meta.xml
<CustomField>
    <fullName>CRC_SLA_Calculated_Pickup_DateTime__c</fullName>
    <label>SLA Calculated Pickup DateTime</label>
    <type>DateTime</type>
</CustomField>