force-app/main/default/objects/Case/fields/CRC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CRC_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>