force-app/main/default/objects/Case/fields/CRC_Stock_Number__c.field-meta.xml
<CustomField>
    <fullName>CRC_Stock_Number__c</fullName>
    <label>Stock Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>