force-app/main/default/objects/Case/fields/CRC_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>CRC_Storage_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Storage Location)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>