force-app/main/default/objects/Case/fields/CRC_Storage_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>CRC_Storage_Location_Name__c</fullName>
    <formula>CRC_Storage_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Storage Location Name</label>
    <type>Text</type>
</CustomField>