force-app/main/default/objects/Case/fields/CRC_Storage_Rate__c.field-meta.xml
<CustomField>
    <fullName>CRC_Storage_Rate__c</fullName>
    <label>Storage Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>