force-app/main/default/objects/Case/fields/CRC_Texas_VSF_Form__c.field-meta.xml
<CustomField>
    <fullName>CRC_Texas_VSF_Form__c</fullName>
    <label>Texas VSF Form</label>
    <length>15</length>
    <type>Text</type>
</CustomField>