force-app/main/default/objects/Case/fields/CRC_Total_Check_Amount__c.field-meta.xml
<CustomField>
    <fullName>CRC_Total_Check_Amount__c</fullName>
    <label>Total Check Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>