force-app/main/default/objects/Case/fields/CRC_Tow_Zone__c.field-meta.xml
<CustomField>
    <fullName>CRC_Tow_Zone__c</fullName>
    <label>Tow Zone</label>
    <length>2</length>
    <type>Text</type>
</CustomField>