force-app/main/default/objects/Case/fields/CRC_Transaction_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CRC_Transaction_Identifier__c</fullName>
    <label>Transaction Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>