force-app/main/default/objects/Case/fields/CRC_Transmission__c.field-meta.xml
<CustomField>
    <fullName>CRC_Transmission__c</fullName>
    <label>Transmission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
                <label>3 speed automatic</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>3 speed automatic w/overdrive</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>3 speed manual</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>4 speed automatic</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>4 speed automatic w/electronic overdrive</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>4 speed automatic w/overdrive</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>4 speed manual</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>4 speed manual w/overdrive</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>5 Speed automatic</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>5 Speed automatic w/ overdrive</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>5 speed manual</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>5 speed manual w/overdrive</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>6 Speed automatic</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>6 speed manual</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>7 Speed Automatic</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>8 Speed Automatic</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>ECVT automatic</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Unknown / other</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Unknown / other automatic</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Unknown / other manual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>