force-app/main/default/objects/Case/fields/CRC_Updated_Authorized_Amount__c.field-meta.xml
<CustomField>
    <fullName>CRC_Updated_Authorized_Amount__c</fullName>
    <label>Updated Authorized Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>