force-app/main/default/objects/Case/fields/CRC_Vehicle_Blocked_In__c.field-meta.xml
<CustomField>
    <fullName>CRC_Vehicle_Blocked_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Blocked In?</label>
    <type>Checkbox</type>
</CustomField>