force-app/main/default/objects/Case/fields/CRC_Vehicle_Location__c.field-meta.xml
<CustomField>
    <fullName>CRC_Vehicle_Location__c</fullName>
    <label>Vehicle Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BYD</fullName>
                <label>Back Yard</label>
            </value>
            <value>
                <fullName>DRV</fullName>
                <label>Driveway</label>
            </value>
            <value>
                <fullName>GAR</fullName>
                <label>Garage</label>
            </value>
            <value>
                <fullName>ONS</fullName>
                <label>On Street In Front Of House</label>
            </value>
            <value>
                <fullName>OTH</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>B</label>
            </value>
            <value>
                <fullName>C</fullName>
                <isActive>false</isActive>
                <label>C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>