force-app/main/default/objects/Case/fields/CRC_Vehicle_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>CRC_Vehicle_On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle On Hold?</label>
    <type>Checkbox</type>
</CustomField>