force-app/main/default/objects/Case/fields/CRC_Vehicle_Released__c.field-meta.xml
<CustomField>
    <fullName>CRC_Vehicle_Released__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Released?</label>
    <type>Checkbox</type>
</CustomField>