force-app/main/default/objects/Case/fields/CRC_Vehicle_Towable__c.field-meta.xml
<CustomField>
    <fullName>CRC_Vehicle_Towable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Towable?</label>
    <type>Checkbox</type>
</CustomField>