force-app/main/default/objects/Case/fields/CRC_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>CRC_Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTOMOBILE</fullName>
            </value>
            <value>
                <fullName>BOAT</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Crane</fullName>
            </value>
            <value>
                <fullName>Farm Equipment</fullName>
            </value>
            <value>
                <fullName>Emergency Equipment</fullName>
            </value>
            <value>
                <fullName>Forestry Equipment</fullName>
            </value>
            <value>
                <fullName>Snowmobile</fullName>
            </value>
            <value>
                <fullName>Motor Home</fullName>
            </value>
            <value>
                <fullName>Travel Trailer</fullName>
            </value>
            <value>
                <fullName>Heavy Equipment</fullName>
            </value>
            <value>
                <fullName>Personal Watercraft</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>B</label>
            </value>
            <value>
                <fullName>C</fullName>
                <isActive>false</isActive>
                <label>C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>