force-app/main/default/objects/Case/fields/CRC_VIN__c.field-meta.xml
<CustomField>
    <fullName>CRC_VIN__c</fullName>
    <label>VIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>