force-app/main/default/objects/Case/fields/CRC_VO_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>CRC_VO_Address_Line_1__c</fullName>
    <label>Address Line 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>