force-app/main/default/objects/Case/fields/CRC_VO_City__c.field-meta.xml
<CustomField>
    <fullName>CRC_VO_City__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>