force-app/main/default/objects/Case/fields/CRC_VO_Country__c.field-meta.xml
<CustomField>
    <fullName>CRC_VO_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRC_Country</valueSetName>
    </valueSet>
</CustomField>