force-app/main/default/objects/Case/fields/CRC_VO_Email__c.field-meta.xml
<CustomField>
    <fullName>CRC_VO_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>