force-app/main/default/objects/Case/fields/CRC_VO_Fax__c.field-meta.xml
<CustomField>
    <fullName>CRC_VO_Fax__c</fullName>
    <label>Fax</label>
    <length>20</length>
    <type>Text</type>
</CustomField>