force-app/main/default/objects/Case/fields/CRC_VO_Primary_Extension__c.field-meta.xml
<CustomField>
    <fullName>CRC_VO_Primary_Extension__c</fullName>
    <label>Primary Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>