force-app/main/default/objects/Case/fields/CRC_VO_Primary_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CRC_VO_Primary_Phone_Number__c</fullName>
    <label>Primary Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>