force-app/main/default/objects/Case/fields/CRC_VO_Primary_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>CRC_VO_Primary_Phone_Type__c</fullName>
    <label>Primary Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPNT</fullName>
                <label>Cell Phone</label>
            </value>
            <value>
                <fullName>CPWT</fullName>
                <label>Cell Phone with Text</label>
            </value>
            <value>
                <fullName>HMPN</fullName>
                <label>Home Phone</label>
            </value>
            <value>
                <fullName>WKPN</fullName>
                <label>Work Phone</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>