force-app/main/default/objects/Case/fields/CRC_VO_Secondary_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>CRC_VO_Secondary_Phone_Type__c</fullName>
    <label>Secondary Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>CPNT</fullName>
            </value>
            <value>
                <fullName>CPWT</fullName>
            </value>
            <value>
                <fullName>HMPN</fullName>
            </value>
            <value>
                <fullName>WKPN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>