force-app/main/default/objects/Case/fields/CRC_VO_StatePicklist__c.field-meta.xml
<CustomField>
    <fullName>CRC_VO_StatePicklist__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRC_State</valueSetName>
    </valueSet>
</CustomField>