force-app/main/default/objects/Case/fields/CRC_VO_Zip__c.field-meta.xml
<CustomField>
    <fullName>CRC_VO_Zip__c</fullName>
    <label>Zip</label>
    <length>15</length>
    <type>Text</type>
</CustomField>