force-app/main/default/objects/Case/fields/CRC_Year__c.field-meta.xml
<CustomField>
    <fullName>CRC_Year__c</fullName>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>