force-app/main/default/objects/Case/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <description>User Story 419985: IAA Org - Define Production Support Process</description>
    <label>Deployment</label>
    <type>Date</type>
</CustomField>