force-app/main/default/objects/Case/fields/Did_Buyer_Use_Local_Tow__c.field-meta.xml
<CustomField>
    <fullName>Did_Buyer_Use_Local_Tow__c</fullName>
    <inlineHelpText>Indicate if buyer utilized local tow service</inlineHelpText>
    <label>Did Buyer Use Local Tow?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>