force-app/main/default/objects/Case/fields/Disposition_Status__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Status__c</fullName>
    <label>Disposition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activated Buyer</fullName>
            </value>
            <value>
                <fullName>Upgraded to Licensed Buyer</fullName>
            </value>
            <value>
                <fullName>No Response from Buyer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>