force-app/main/default/objects/Case/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User Story 419985: IAA Org - Define Production Support Process</description>
    <label>Executive Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>